--- a/.github/workflows/test-results.yml
+++ b/.github/workflows/test-results.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main          # main 브랜치에 push될 때 실행
-      - testrail_v2   # testrail_v2 브랜치에 push될 때 실행
+      - testrail_v3   # testrail_v2 브랜치에 push될 때 실행
   pull_request:
     branches:
       - main          # main 브랜치에 PR이 생성될 때 실행
-      - testrail_v2   # testrail_v2 브랜치에 PR이 생성될 때 실행
+      - testrail_v3   # testrail_v2 브랜치에 PR이 생성될 때 실행
 
 jobs:
   testrail-integration:
@@ -33,12 +33,17 @@ jobs:
         TESTRAIL_API_KEY: ${{ secrets.TESTRAIL_API_KEY }}  # GitHub Secrets에 저장된 TestRail API Key 사용
         TESTRAIL_USER: ${{ secrets.TESTRAIL_USER }}  # GitHub Secrets에 저장된 TestRail User 사용
         TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}  # GitHub Secrets에 저장된 TestRail URL 사용
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-        
     - name: Send Slack Notification
       run: |
-        curl -X POST -H "Content-type: application/json" \
-        --data '{"text":"TestRail Integration completed successfully!"}' $SLACK_WEBHOOK_URL
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # GitHub Secrets에 저장된 Slack Webhook URL 사용
-
+          node -e "
+            const axios = require('axios');
+            const slackMessage = {
+              text: 'Test Run Details:\\nName: TestRunName\\nPassed: 4\\nFailed: 1\\nBlocked: 0\\nURL: TestRunURL'
+            };
+            axios.post(process.env.SLACK_WEBHOOK_URL, slackMessage)
+              .then(() => console.log('Message sent to Slack'))
+              .catch(error => console.error('Error sending message to Slack:', error));
+          "
+      
