--- a/.github/workflows/test-results.yml
+++ b/.github/workflows/test-results.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - testrail_v2
   pull_request:
     branches:
       - main
+      - testrail_v2
 
 jobs:
   testrail-integration:
