--- a/.github/workflows/test-results.yml
+++ b/.github/workflows/test-results.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main  # main 브랜치에 push될 때마다 실행
-      - testrail_v2
+      - testrail_v6
   pull_request:
     branches:
       - main  # main 브랜치에 PR이 생길 때마다 실행
-      - testrail_v2
+      - testrail_v6
 
 jobs:
   testrail-integration:
@@ -34,12 +34,12 @@ jobs:
         TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}  # GitHub Secrets에 저장된 TestRail URL 사용
 
 
-    - name: Send Slack Notification
-      run: |
-        curl -X POST -H "Content-type: application/json" \
-        --data '{"text":"TestRail Integration completed successfully!"}' $SLACK_WEBHOOK_URL
+    # - name: Send Slack Notification
+    #   run: |
+    #     curl -X POST -H "Content-type: application/json" \
+    #     --data '{"text":"TestRail Integration completed successfully!"}' $SLACK_WEBHOOK_URL
 
-      env:
+      # env:
 
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # GitHub Secrets에 저장된 Slack Webhook URL 사용
 
