--- a/.github/workflows/test-results.yml
+++ b/.github/workflows/test-results.yml
@@ -33,7 +33,21 @@ jobs:
         TESTRAIL_USER: ${{ secrets.TESTRAIL_USER }}
         TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-    
+
+
+    - name: Print environment variables
+      run: |
+        echo "TESTRAIL_API_KEY: $TESTRAIL_API_KEY"
+        echo "TESTRAIL_USER: $TESTRAIL_USER"
+        echo "TESTRAIL_URL: $TESTRAIL_URL"
+        echo "SLACK_WEBHOOK_URL: $SLACK_WEBHOOK_URL"
+      env:
+        TESTRAIL_API_KEY: ${{ secrets.TESTRAIL_API_KEY }}
+        TESTRAIL_USER: ${{ secrets.TESTRAIL_USER }}
+        TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+
     - name: Send Slack Notification
       run: |
         if [ -f slack_message.txt ]; then
@@ -45,5 +59,5 @@ jobs:
         --data "{\"text\":\"$MESSAGE\"}" $SLACK_WEBHOOK_URL
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-       
+  
 
